--- a/styleHomePage.css
+++ b/styleHomePage.css
@@ -177,4 +177,229 @@ form.searchBtn input[type=text] {
   }
 .quotes{
     margin-left: 90px;
+    margin-top: -20px;
+}
+.image-container .btn{
+  position:absolute;
+  top:190%;
+  left: 60%;
+  transform: translate(-50%,-50%);
+  background-color:transparent;
+  color:white;
+  cursor: pointer;
+  font-size: 15px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.bar3{
+  background-color: rgb(242, 220, 181);
+    padding: 10px;
+    margin-top: -10px;
+    color: white;
+    font-size: 20px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    margin-top: -25px;
+    text-align: center;
+}
+
+.container {
+  width: 100%;
+  height: 50%;
+  color: black;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: white;
+  margin-top: 100px;
+}
+
+h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.description {
+  text-align: center;
+  width: 43%;
+}
+
+.clientImage {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.clientImage span {
+  margin-left: 10px;
+}
+
+.clientImage img {
+  width: 40px;
+  margin-left: 0;
+  margin-top: 10px;
+}
+
+.reviewSection {
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.reviewItem {
+  width: 300px;
+  padding: 10px;
+  margin: 1rem;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: white;
+  border: 1px solid #10102a;
+  transition: all .2s linear;
+}
+
+.reviewItem:hover {
+  border-color: rgb(242, 220, 181);
+  transform: scale(1.01);
+  background-color:rgb(242, 220, 181);
+  box-shadow: 0 0px 5px 0px #cbc0c0;
+}
+
+.top {
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.top ul {
+  display: flex;
+  list-style: none;
+}
+
+.top ul li {
+  padding-left: 4px;
+}
+
+article p {
+  font-size: 15px;
+  font-weight: 100;
+  margin-bottom: 1rem;
+  font-family: system-ui;
+}
+
+
+@media screen and (max-width:700px) {
+  .container {
+      height: auto;
+  }
+
+  .description {
+      width: 90%;
+  }
+}
+
+@media screen and (max-width:375px) {
+  .reviewSection {
+      padding: 0;
+  }
+
+  .reviewItem {
+      width: 100%;
+  }
+
+  .clientImage {
+      margin-bottom: 0.6rem;
+  }
+
+  .top {
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+  }
+}
+ul.suportClienti{
+  margin-top: 100px;
+}
+ul.suportClienti li{
+  margin-left: 200px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 10px;
+  margin-bottom: 5px;
+  list-style-type: none;
+}
+ul.ghid{
+  margin-left: 500px;
+  margin-top: -90px;
+}
+ul.ghid li{
+  margin-left: 100px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 10px;
+  margin-bottom: 5px;
+  list-style-type: none;
+}
+ul.termeniSiCond{
+  margin-left: 1000px;
+  margin-top: -90px;
+}
+ul.termeniSiCond li{
+  margin-left: -20px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 10px;
+  margin-bottom: 5px;
+  list-style-type: none;
+}
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-facebook {
+background: #3B5998;
+color: white;
+font-size: 50px;
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  margin: 5px 2px;
+  border-radius: 20px;
+  text-decoration: none;
+  float: left;
+  margin-right: 80px;
+}
+.fa-youtube {
+background: #bb0000;
+color: white;
+padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  margin: 5px 2px;
+  border-radius: 20px;
+  text-decoration: none;
+  float: left;
+  margin-right: 80px;
+}
+
+.fa-instagram {
+background: #125688;
+color: white;
+padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  margin: 5px 2px;
+  border-radius: 20px;
+  text-decoration: none;
+  float: left;
+  margin-right: 80px;
+}
+.bar4{
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+font-weight: bolder;
+font-size: 20px;
+margin-top: 60px;
+margin-left: 20px;
 }
